; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/rc/extr_xbox_remote.c_xbox_remote_rc_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/rc/extr_xbox_remote.c_xbox_remote_rc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xbox_remote = type { %struct.TYPE_4__*, i32, i32, i32, %struct.rc_dev* }
%struct.TYPE_4__ = type { i32 }
%struct.rc_dev = type { i8*, %struct.TYPE_3__, i32, i32, i32, i32, i32, i32, i32, %struct.xbox_remote* }
%struct.TYPE_3__ = type { i32* }

@RC_PROTO_BIT_XBOX_DVD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"xbox_remote\00", align 1
@xbox_remote_rc_open = common dso_local global i32 0, align 4
@xbox_remote_rc_close = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xbox_remote*)* @xbox_remote_rc_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xbox_remote_rc_init(%struct.xbox_remote* %0) #0 {
  %2 = alloca %struct.xbox_remote*, align 8
  %3 = alloca %struct.rc_dev*, align 8
  store %struct.xbox_remote* %0, %struct.xbox_remote** %2, align 8
  %4 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %5 = getelementptr inbounds %struct.xbox_remote, %struct.xbox_remote* %4, i32 0, i32 4
  %6 = load %struct.rc_dev*, %struct.rc_dev** %5, align 8
  store %struct.rc_dev* %6, %struct.rc_dev** %3, align 8
  %7 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %8 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %9 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %8, i32 0, i32 9
  store %struct.xbox_remote* %7, %struct.xbox_remote** %9, align 8
  %10 = load i32, i32* @RC_PROTO_BIT_XBOX_DVD, align 4
  %11 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %12 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %11, i32 0, i32 8
  store i32 %10, i32* %12, align 8
  %13 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %14 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %13, i32 0, i32 0
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %14, align 8
  %15 = load i32, i32* @xbox_remote_rc_open, align 4
  %16 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %17 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %16, i32 0, i32 7
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @xbox_remote_rc_close, align 4
  %19 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %20 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %19, i32 0, i32 6
  store i32 %18, i32* %20, align 8
  %21 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %22 = getelementptr inbounds %struct.xbox_remote, %struct.xbox_remote* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %25 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %24, i32 0, i32 5
  store i32 %23, i32* %25, align 4
  %26 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %27 = getelementptr inbounds %struct.xbox_remote, %struct.xbox_remote* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %30 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %29, i32 0, i32 4
  store i32 %28, i32* %30, align 8
  %31 = call i32 @MS_TO_NS(i32 10)
  %32 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %33 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %32, i32 0, i32 3
  store i32 %31, i32* %33, align 4
  %34 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %35 = getelementptr inbounds %struct.xbox_remote, %struct.xbox_remote* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %38 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %37, i32 0, i32 2
  %39 = call i32 @usb_to_input_id(i32 %36, i32* %38)
  %40 = load %struct.xbox_remote*, %struct.xbox_remote** %2, align 8
  %41 = getelementptr inbounds %struct.xbox_remote, %struct.xbox_remote* %40, i32 0, i32 0
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 0
  %44 = load %struct.rc_dev*, %struct.rc_dev** %3, align 8
  %45 = getelementptr inbounds %struct.rc_dev, %struct.rc_dev* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  store i32* %43, i32** %46, align 8
  ret void
}

declare dso_local i32 @MS_TO_NS(i32) #1

declare dso_local i32 @usb_to_input_id(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
